# selfhostablechat

./: .dockerignore  .env.example  .gitignore  ANDROID_ELECTRON_BUNDLING.md  ANDROID_TROUBLESHOOTING.md  BUILD_REFERENCE.md  CAPACITOR_EMBEDDED_NODEJS.md  CAPACITOR_IMPLEMENTATION.md  CAPACITOR_STATUS.md  CAPACITOR_SUMMARY.md  Dockerfile  ELECTRON_MIGRATION.md  GRADLE_FIX.md  README.md  TANSTACK_QUERY.md  TANSTACK_QUERY_IMPLEMENTATION.md  TANSTACK_QUERY_SETUP.md  capacitor.config.ts  docker-compose.yml  drizzle.config.ts  electron-builder.json  model_pricing_raw.txt  null  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  webaicat.psd
.agent/: ENHANCED_IMAGES.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
capacitor/: MainActivity.java  README.md  server.ts
capacitor/plugin/: index.ts  web.ts
data/: chat.db
drizzle/: 0000_fat_morgan_stark.sql  0001_fat_giant_girl.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
electron/: README.md  main.js  preload.js
scripts/: build-capacitor.js  healthcheck.js  migrate-auth.ts  migrate-users.ts  setup-env.ts
src/: app.css  app.html  hooks.server.ts  service-worker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: index.ts  types.ts
src/lib/components/: Navigation.svelte
src/lib/query/: client.ts  helpers.ts
src/lib/shared/: models.ts
src/lib/stores/: README.md  apiKey.svelte.ts  (+18 more)
src/routes/: +layout.svelte  +page.svelte
(+51 files in other folders)
